--- a/web/src/main/res/layout/web_activity_web.xml
+++ b/web/src/main/res/layout/web_activity_web.xml
@@ -6,15 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".WebActivity">
 
-    <io.github.zauther.test.web.core.ZWebView
+    <io.github.zauther.hive.web.x5.HiveX5WebView
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:id="@+id/web_view"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp" />
+        android:layout_height="fill_parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
